[project]
name = "ml-training-debugger"
version = "1.0.0"
description = "OpenEnv environment for debugging broken ML training runs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.58.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/ajaytn/ml-training-debugger"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "ml-training-debugger"
version = "1.0.0"
tasks = [
    "easy_lr_divergence",
    "medium_wrong_loss",
    "medium_data_leakage",
    "hard_overfitting_cascade",
    "hard_dual_bug",
]
action_space = [
    "inspect_logs",
    "inspect_metrics",
    "inspect_config",
    "check_data",
    "diagnose_issue",
    "modify_config",
    "apply_fix",
    "restart_training",
    "submit_diagnosis",
]
reward_range = [0.0, 1.0]
